manifests/frontend-destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: frontend
spec:
  host: frontend.project1.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    connectionPool:
      tcp:
        maxConnections: 20
      http:
        http1MaxPendingRequests: 5
    outlierDetection:
      consecutiveGatewayErrors: 2
      consecutive5xxErrors: 2
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
  # host: frontend
  # subsets:
  # - name: v1
  #   labels:
  #     app: frontend
  #     version: v1
  #   trafficPolicy:
  #     loadBalancer:
  #       simple: ROUND_ROBIN
  # - name: v2
  #   labels:
  #     app: frontend
  #     version: v2
  #   trafficPolicy:
  #     loadBalancer:
  #       simple: ROUND_ROBIN
